--- a/wp-content/uploads/elementor/css/post-5.css
+++ b/wp-content/uploads/elementor/css/post-5.css
@@ -1,22 +1,22 @@
-.elementor-kit-5{--e-global-color-primary:#FFFFFF;--e-global-color-secondary:#51534E;--e-global-color-text:#333333;--e-global-color-accent:#BD942D;--e-global-typography-primary-font-family:"rmsClashD";--e-global-typography-primary-font-weight:600;--e-global-typography-primary-line-height:1.3em;--e-global-typography-secondary-font-family:"rmsClashD";--e-global-typography-secondary-font-weight:400;--e-global-typography-secondary-line-height:1.3em;--e-global-typography-text-font-family:"rmsClashD";--e-global-typography-text-font-weight:400;--e-global-typography-text-line-height:1.3em;--e-global-typography-accent-font-family:"rmsClashD";--e-global-typography-accent-font-size:20px;--e-global-typography-accent-font-weight:500;--e-global-typography-accent-line-height:1.3em;font-size:18px;line-height:1.3em;background-image:url("https://royaldefencetech.com/wp-content/uploads/2023/04/rms-defence-technology-bg.svg");background-size:cover;}.elementor-kit-5 button,.elementor-kit-5 input[type="button"],.elementor-kit-5 input[type="submit"],.elementor-kit-5 .elementor-button{font-family:"rmsClashD", Sans-serif;font-size:18px;line-height:1.2em;background-color:#BD942D;}.elementor-section.elementor-section-boxed > .elementor-container{max-width:1140px;}.e-con{--container-max-width:1140px;}.elementor-widget:not(:last-child){margin-bottom:20px;}.elementor-element{--widgets-spacing:20px;}{}h1.entry-title{display:var(--page-title-display);}.site-header{padding-inline-end:0px;padding-inline-start:0px;}@media(max-width:1024px){.elementor-section.elementor-section-boxed > .elementor-container{max-width:1024px;}.e-con{--container-max-width:1024px;}}@media(max-width:767px){.elementor-section.elementor-section-boxed > .elementor-container{max-width:767px;}.e-con{--container-max-width:767px;}}/* Start Custom Fonts CSS */@font-face {
+.elementor-kit-5{--e-global-color-primary:#FFFFFF;--e-global-color-secondary:#51534E;--e-global-color-text:#333333;--e-global-color-accent:#BD942D;--e-global-typography-primary-font-family:"rmsClashD";--e-global-typography-primary-font-weight:600;--e-global-typography-primary-line-height:1.3em;--e-global-typography-secondary-font-family:"rmsClashD";--e-global-typography-secondary-font-weight:400;--e-global-typography-secondary-line-height:1.3em;--e-global-typography-text-font-family:"rmsClashD";--e-global-typography-text-font-weight:400;--e-global-typography-text-line-height:1.3em;--e-global-typography-accent-font-family:"rmsClashD";--e-global-typography-accent-font-size:20px;--e-global-typography-accent-font-weight:500;--e-global-typography-accent-line-height:1.3em;font-size:18px;line-height:1.3em;background-image:url("https://thavasigti.github.io/royaldefencetech/wp-content/uploads/2023/04/rms-defence-technology-bg.svg");background-size:cover;}.elementor-kit-5 button,.elementor-kit-5 input[type="button"],.elementor-kit-5 input[type="submit"],.elementor-kit-5 .elementor-button{font-family:"rmsClashD", Sans-serif;font-size:18px;line-height:1.2em;background-color:#BD942D;}.elementor-section.elementor-section-boxed > .elementor-container{max-width:1140px;}.e-con{--container-max-width:1140px;}.elementor-widget:not(:last-child){margin-bottom:20px;}.elementor-element{--widgets-spacing:20px;}{}h1.entry-title{display:var(--page-title-display);}.site-header{padding-inline-end:0px;padding-inline-start:0px;}@media(max-width:1024px){.elementor-section.elementor-section-boxed > .elementor-container{max-width:1024px;}.e-con{--container-max-width:1024px;}}@media(max-width:767px){.elementor-section.elementor-section-boxed > .elementor-container{max-width:767px;}.e-con{--container-max-width:767px;}}/* Start Custom Fonts CSS */@font-face {
 	font-family: 'rmsClashD';
 	font-style: normal;
 	font-weight: normal;
 	font-display: auto;
-	src: url('https://royaldefencetech.com/wp-content/uploads/2023/04/ClashDisplay-Regular.woff') format('woff');
+	src: url('https://thavasigti.github.io/royaldefencetech/wp-content/uploads/2023/04/ClashDisplay-Regular.woff') format('woff');
 }
 @font-face {
 	font-family: 'rmsClashD';
 	font-style: normal;
 	font-weight: 900;
 	font-display: auto;
-	src: url('https://royaldefencetech.com/wp-content/uploads/2023/04/ClashDisplay-Bold.woff') format('woff');
+	src: url('https://thavasigti.github.io/royaldefencetech/wp-content/uploads/2023/04/ClashDisplay-Bold.woff') format('woff');
 }
 @font-face {
 	font-family: 'rmsClashD';
 	font-style: normal;
 	font-weight: bold;
 	font-display: auto;
-	src: url('https://royaldefencetech.com/wp-content/uploads/2023/04/ClashDisplay-Semibold.woff') format('woff');
+	src: url('https://thavasigti.github.io/royaldefencetech/wp-content/uploads/2023/04/ClashDisplay-Semibold.woff') format('woff');
 }
 /* End Custom Fonts CSS */
